[tool.poetry]
name = "honeywell-imtcc-poller"
version = "0.1.0"
description = "Tool for logging stats from the Honeywell international.mytotalconnectcomfort.com site"
authors = ["Dave Randall <19395688+daveygit2050@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "honeywell_imtcc_poller"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
click = "^8.1.3"
tenacity = "^8.0.1"
prometheus-client = "^0.14.1"

[tool.poetry.scripts]
poll-honeywell = 'honeywell_imtcc_poller:run_cli'

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
pytest = "^7.1.3"
pytest-cov = "^3.0.0"

[tool.coverage.run]
source = ["honeywell_imtcc_poller"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
